# dim

./: .gitignore  .gitmodules  ;  APACHE_LICENSE  CMakeLists.txt  Cargo.toml  README.md  TestDumpAsttest.DslTest1.txt  TestDumpAsttest.DslTest2.txt  build  build.bat  build.bat.bak  build.ps1  build.sh  build_apt.sh  build_build.sh  build_clean.sh  build_dnf.sh  build_init.sh  build_linux.sh  build_macos.sh  build_pacman.sh  build_test.sh  compile_commands.json  grammar-dev.g  grammar.g  script.g  tinyc.c
example/: CMakeBSD.cmake  CMakeLinux.cmake  CMakeLists.txt  CMakeMacOSX.cmake  CMakeWindows.cmake  NCursesTermExample.cpp  bison.tab.cpp  bison.tab.hpp  bison.y  flex.l  flex.yy.cpp  flex_bison.cpp  icu_ustdio.cpp  icuu_fgets.cpp  llvm_IRBuilder_Add.cpp  llvm_IRBuilder_CreateAdd.cpp  llvm_IRBuilder_Div.cpp  llvm_IRBuilder_IntAdd.cpp  llvm_IRBuilder_IntMul.cpp  llvm_IRBuilder_IntSub.cpp  llvm_IRBuilder_Mul.cpp  llvm_IRBuilder_Sub.cpp  llvm_IRBuilder_Util.cpp  llvm_IRBuilder_Util.h
example/cmake/: bsd.cmake  linux.cmake  macos.cmake  msvc.cmake  msvcd.cmake
example/cmake.bak/: msvc.cmake
example/llvms/: BinaryOperation.cpp  Util.cpp  Util.h
src/: Approximate.cpp  Approximate.cpp.bak  Approximate.h  Approximate.h.bak  Ast.cpp  Ast.h  AstClasses.h  AstGraph.cpp  AstGraph.h  Block.cpp  Block.cpp.bak  Block.h  Buffer.cpp  Buffer.cpp.bak  Buffer.h  Buffer.h.bak  BufferStack.cpp  BufferStack.cpp.bak  BufferStack.h  BufferStack.h.bak  CMakeBSD.cmake  CMakeLinux.cmake  CMakeLists.txt  CMakeMacOSX.cmake  CMakeUNIX.cmake  CMakeWindows.cmake  Cache.cpp  Cache.h  CheckVisitor.cpp  CheckVisitor.h  Clock.cpp  Clock.h  Compiler.cpp  Compiler.h  ConcurrentHashMap.h  Config.cpp  Config.h  Configure.h  Configure.h.in  Counter.cpp  (+235 more)
src/cmake/: bsd.cmake  linux.cmake  macos.cmake  msvc.cmake  msvcd.cmake  src.cmake
src/config/: Event.h  Header.h  Platform.h
src/container/: Cowstr.cpp  CycleBuffer.cpp  CycleBuffer.h  LinkedHashMap.cpp  LinkedHashMap.h  LinkedHashMap.hpp
src/controller/: Key.h
src/dsl/: Ast.h  Interpreter.cpp  Lexer.cpp  Lexer.h  NodeVisitor.h  SymbolTable.h  Token.cpp  Token.h  Type.cpp  Type.h
src/event/: Api.cpp  Api.h  ApiConfig.h  EPollApi.cpp  EPollApi.h  EventLoop.cpp  EventLoop.h  EventLoopImpl.cpp  EventLoopImpl.h  KQueueApi.cpp  KQueueApi.h  Poll.cpp  Poll.h  PollApi.cpp  PollApi.h  SelectApi.cpp  SelectApi.h  WinSelectApi.cpp  WinSelectApi.h
src/eventloop/: Api.cpp  Api.h  EPollApi.cpp  EPollApi.h  EventLoop.h  EventLoopImpl.cpp  EventLoopImpl.h  Poll.cpp  Poll.h  PollApi.cpp  PollApi.h  SelectApi.cpp  SelectApi.h
src/exception/: AllocException.h  BadAllocException.h  CheckException.h  CheckFailureException.h  DeclExcept.h  Exception.cpp  Exception.h  NotFoundException.h  NotImplementException.h  ParseException.h  ScriptException.h  UnicodeException.h
src/exceptions/: NoSuchOrderException.h  ParameterException.h  PreCheckException.h
src/graph/: Dot.cpp  Dot.h  Util.cpp  Util.h
src/graph2/: Calculation.h  Dot2.cpp  Dot2.h  G2.cpp  G2.h  Util.cpp  Util.h
src/iface/: Identifiable.cpp  Identifiable.h  LLVMModular.cpp  LLVMModular.cpp.bak  LLVMModular.h  LLVMModular.h.bak  LLVMTypable.cpp  LLVMTypable.cpp.bak  LLVMTypable.h  LLVMTypable.h.bak  LLVMValuable.cpp  LLVMValuable.cpp.bak  LLVMValuable.h  LLVMValuable.h.bak  Locationable.cpp  Locationable.h  Nameable.cpp  Nameable.h  Phase.cpp  Phase.h  Scoped.cpp  Scoped.h  Symbolizable.cpp  Symbolizable.h  TypeSymbolizable.cpp  TypeSymbolizable.h  Visitor.cpp  Visitor.h
src/infra/: Counter.cpp  Counter.h  Cowstr.cpp  Cowstr.h  CycleBuffer.cpp  CycleBuffer.h  Exception.cpp  Exception.h  Files.cpp  Files.h  LinkedHashMap.h  LinkedHashMap.hpp  Log.cpp  Log.h  Strings.cpp  Strings.h
src/interface/: Identifiable.cpp  Identifiable.h  Locationable.cpp  Locationable.h  Nameable.cpp  Nameable.h  Namely.h  Ownable.cpp  Parentable.cpp  Parentable.h  Stringify.h  Typeable.cpp  Typely.h
src/memory/: Block.h  Buf.cpp  Buf.h  ResourceHandler.cpp  ResourceHandler.h  Row.cpp  Row.h
src/model/: Buffer.cpp  Buffer.h  Cache.cpp  Cache.h  CacheManager.h  File.cpp  File.h  FileManager.h  Index.h  Line.cpp  ModelFile.cpp  ModelFile.h  ModelFileManager.h  ModelLine.cpp  ModelLine.h
src/process/: Proc.cpp  Proc.h
src/scope/: AnonymousScope.cpp  AnonymousScope.h  GlobalScope.cpp  GlobalScope.h  LocalScope.cpp  LocalScope.h
src/script/: Ast.cpp  Ast.h  AstLeaf.cpp  AstLeaf.h  AstList.cpp  AstList.h  AstTree.h  Expr.cpp  Expr.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MetaType.cpp  MetaType.h  NodeVisitor.h  Parser.cpp  Parser.h  ScopeSymbolTable.cpp  ScopeSymbolTable.h  Symbol.cpp  Symbol.h  SymbolTable.cpp  SymbolTable.h  SymbolTableBuilder.cpp  SymbolTableBuilder.h  Token.cpp  Token.h  TokenType.cpp  TokenType.h  Type.cpp  Type.h  Util.cpp  Util.h
src/script.bak/: Token.h  Type.h  Util.cpp  Util.h
src/symbol/: BuiltinTypeSymbol.cpp  BuiltinTypeSymbol.h  ClassSymbol.cpp  ClassSymbol.h  FunctionSymbol.cpp  FunctionSymbol.h  VariableSymbol.cpp  VariableSymbol.h
src/system/: DateTime.cpp
src/view/: Area.cpp  Area.h  Cursor.cpp  Cursor.h  G2.cpp  G2.h  PanelView.h  Position.cpp  Position.h  Vec.cpp  Vec.h  View.h  ViewType.cpp  ViewType.h  Window.cpp  Window.h
test/: ApproximateTest.cpp  ApproximateTest.cpp.bak  AstGraphTest.cpp  BlockTest.cpp  CMakeBSD.cmake  CMakeLinux.cmake  CMakeLists.txt  CMakeLists.txt.bak  CMakeMacOSX.cmake  CMakeWindows.cmake  ClockTest.cpp  ConfigTest.cpp  ConfigureTest.cpp  CowstrTest.cpp  CycleBufferTest.cpp  DefineTest.cpp  DrawerTest.cpp  DslTest1.co  DslTest1.fast  DslTest1.ft  DslTest2.co  DslTest2.fast  DslTest2.ft  DumpTest.cpp  DumperTest.cpp  ExceptionTest.cpp  ExceptionTest.cpp.bak  FileTest.cpp  FilerTest.cpp  FilerTestBigFile.html  FilesTest.cpp  GraphTest.cpp  HashTest.cpp  HashTest.cpp.bak  IrBuilderTest.cpp  IrUtilTest.cpp  IrUtilTest.cpp.bak  IrWriterTest.cpp  IrWriterTest.cpp.bak  LineBoundTest.cpp  (+32 more)
test/case/: DslTest1.co  DslTest2.co  FunctionalTest1.nd  IrTest1.shp  IrTest2.shp  IrTest3.shp  Parse1.nd  Parse2.nd  Parser1.nd  Parser1.shp  Parser2.nd  (+20 more)
(+175 files in other folders)
